# gpio_sync

./: .gitignore  CMakeLists.txt  README.md
cmake/: arm-linux-gnueabihf-gcc.cmake
docker/: Dockerfile
docs/: Doxyfile.in  gsync_circuit.fzz  software_arch.drawio
include/gpio/: gpio.hpp
include/sync/: sync.hpp
include/util/gpio/: gpio.hpp
include/util/mem/: mem.hpp
include/util/shmem/: shmem.hpp
scripts/: build.sh  clean.sh  config.sh  containerized_build.sh  kill.sh  run.sh
src/: CMakeLists.txt
src/gpio/: gpio.cc
src/gsync/: CMakeLists.txt  gsync.cc
src/gtimer/: CMakeLists.txt  gtimer.cc
src/shmem/: CMakeLists.txt
src/sync/: CMakeLists.txt  sync.cc
src/util/: CMakeLists.txt
src/util/gpio/: CMakeLists.txt  gpio.cc
src/util/mem/: CMakeLists.txt  mem.cc
